Fix issue display for nil comments_count and update test case

--- a/app/views/issues/_issue.html.erb
+++ b/app/views/issues/_issue.html.erb
@@ -12,7 +12,7 @@
         <p class="card-subtitle mb-2 text-muted"><i><small>
           <%= issue.pull_request ? 'Pull Request' : 'Issue' %> -
           State: <%= issue.state %> - Opened by <%= issue.user.blank? ? "Unknown" : link_to(issue.user, host_author_path(@host, issue.user)) %> <%= time_ago_in_words(issue.created_at) %> ago
-          <% if issue.comments_count > 0 %>
+          <% if issue.comments_count.to_i > 0 %>
             - <%= pluralize issue.comments_count, 'comment' %>   
           <% end %>
           <br />
