Fix pagination checks to handle nil values for pagy Plus added test for rendering with zero or one page

--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -27,5 +27,5 @@
   </ul>
 
   <%= render collection: @authors, partial: 'authors/author' %>
-  <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>  
+  <%== pagy_bootstrap_nav(@pagy) if @pagy&.pages && @pagy.pages > 1 %>  
 </div>
