--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -13,5 +13,5 @@
   <%- end %>
 
   <%= render @issues %>
-  <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>  
+  <%== pagy_bootstrap_nav(@pagy) if @pagy&.pages && @pagy.pages > 1 %>  
 </div>
