--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -47,5 +47,5 @@
   <% end %>
 
   <%= render @repositories %>
-  <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>  
+  <%== pagy_bootstrap_nav(@pagy) if @pagy&.pages && @pagy.pages > 1 %>  
 </div>
