--- a/app/views/imports/index.html.erb
+++ b/app/views/imports/index.html.erb
@@ -78,8 +78,8 @@
         </tbody>
       </table>
     </div>
-    
-    <%== pagy_bootstrap_nav(@pagy) %>
+
+    <%== pagy_bootstrap_nav(@pagy) if @pagy&.pages && @pagy.pages > 1 %>
   <% else %>
     <p class='my-5'>No imports found.</p>
   <% end%>
