--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -36,5 +36,5 @@
   </ul>
 
   <%= render collection: @owners, partial: 'owners/owner' %>
-  <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>  
+  <%== pagy_bootstrap_nav(@pagy) if @pagy&.pages && @pagy.pages > 1 %>  
 </div>
